--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: "postgres:11"
     environment:
       - "POSTGRES_HOST_AUTH_METHOD=trust"
+    env_file:
+      - db.env
     volumes:
       - postgres_data:/var/lib/postgresql/data/
   web:
