--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ certifi==2020.12.5; python_version >= "3.6" and python_full_version < "3.0.0" or
 chardet==4.0.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 click==7.1.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0"
+django-cors-headers==3.7.0; python_version >= "3.6"
+django-environ==0.4.5
 django==3.1.7; python_version >= "3.6"
 djangorestframework-simplejwt==4.6.0; python_version >= "3.7"
 djangorestframework==3.12.2; python_version >= "3.5"
@@ -22,7 +24,6 @@ pyflakes==2.3.1; python_version >= "2.7" and python_full_version < "3.0.0" or py
 pygments==2.8.1; python_version >= "3.6"
 pyjwt==2.0.1; python_version >= "3.7"
 pysocks==1.7.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-python-dotenv==0.15.0
 pytz==2021.1; python_version >= "3.7"
 regex==2021.3.17; python_version >= "3.6"
 requests-toolbelt==0.9.1; python_version >= "3.6"
