--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,6 @@
 version: '3.7'
 
 services:
-  db:
-    image: "postgres:11"
-    environment:
-      - "POSTGRES_HOST_AUTH_METHOD=trust"
-      - "POSTGRES_DB=postgres"
-      - "POSTGRES_USER=postgres"
-      - "POSTGRES_PASSWORD=postgres"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
   web:
     build: .
     command: gunicorn todo_drf_auth.wsgi:application --bind 0.0.0.0:8000 --workers 4
@@ -17,8 +8,17 @@ services:
       - .:/code
     ports:
       - 8000:8000
-    depends_on:
-      - db
+    # depends_on:
+    #   - db
+  # db:
+  #   image: "postgres:11"
+  #   environment:
+  #     - "POSTGRES_HOST_AUTH_METHOD=trust"
+  #     - "POSTGRES_DB=postgres"
+  #     - "POSTGRES_USER=postgres"
+  #     - "POSTGRES_PASSWORD=postgres"
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data/
 
-volumes:
-  postgres_data:
+# volumes:
+#   postgres_data:
